--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -5,7 +5,7 @@ DB_NAME = "CustomerFeedback"
 DB_USERNAME = "postgres"  # You may need to update this
 DB_PASSWORD = "Po$tgr3$18Sol"  # You may need to update this
 
-SMS_API_URL = https://restapi.tobeprecisesms.com/api
+SMS_API_URL = "https://restapi.tobeprecisesms.com/api"
 SMS_USERNAME ="AjmalOTP"
 SMS_PASSWORD = "AJmt6301"
 SMS_SENDER = "Ajmal One"   
