--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -2,7 +2,7 @@
 DB_HOST = "103.173.18.175"
 DB_PORT = 5432
 DB_NAME = "CustomerFeedback"
-DB_USERNAME = "postgres"  # You may need to update this
+DB_USER = "postgres"  # You may need to update this
 DB_PASSWORD = "Po$tgr3$18Sol"  # You may need to update this
 
 SMS_API_URL = "https://restapi.tobeprecisesms.com/api"
